# FOR_CC_ROS2

./: .gitignore  README.md  environment.yml  init_workspace.py
doc/: temp_layout.txt
sdk/: README.md
src/cc_chassis/: CMakeLists.txt  package.xml
src/cc_chassis/launch/: bringup.launch.py
src/cc_chassis/src/: chassis_node.cpp
src/cc_config/: CMakeLists.txt  package.xml
src/cc_config/config/: hardware.yaml
src/cc_config/rviz/: lidar.rviz
src/cc_nav/: CMakeLists.txt  package.xml
src/cc_nav/config/: nav2_params.yaml
src/cc_nav/launch/: mapping.launch.py  nav2_bringup.launch.py
src/cc_nav/maps/: default_map.yaml
src/cc_teleop/: CMakeLists.txt  package.xml
src/cc_teleop/launch/: teleop_joy.launch.py
src/cc_teleop/src/: joy_to_cmd.cpp
src/cc_vision/: CMakeLists.txt  package.xml
src/cc_vision/launch/: auto_follow.launch.py
src/cc_vision/src/: auto_follow.cpp
src/navcase_interfaces/: CMakeLists.txt  package.xml
src/navcase_interfaces/action/: ControlAction.action
src/navcase_interfaces/msg/: BatteryData.msg  ControlCommand.msg  FollowTarget.msg  GpsData.msg  ImuData.msg  ObstacleData.msg  RobotStatus.msg  SensorData.msg
src/navcase_interfaces/srv/: SetConfig.srv
tools/: test_camera.py  test_joystick.py  test_lidar.py  test_serial.py
